fix footer overlapping project links

--- a/style/_section.scss
+++ b/style/_section.scss
@@ -33,6 +33,7 @@ section {
         
         a {
             color: #fff;
+            z-index: 99;
         }
     }
 }
